revise auth module

--- a/www/apps/resources/app/commerce-modules/auth/create-actor-type/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/create-actor-type/page.mdx
@@ -1,3 +1,10 @@
+---
+sidebar_label: "Create an Actor Type"
+tags:
+  - auth
+  - server
+---
+
 export const metadata = {
   title: `How to Create an Actor Type`,
 }
