--- a/www/apps/resources/app/commerce-modules/auth/reset-password/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/reset-password/page.mdx
@@ -1,3 +1,10 @@
+---
+sidebar_label: "Handle Password Reset Event"
+tags:
+  - auth
+  - server
+---
+
 import { Prerequisites } from "docs-ui"
 
 export const metadata = {
