--- a/www/apps/resources/app/commerce-modules/auth/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/page.mdx
@@ -23,6 +23,8 @@ Learn more about why modules are isolated in [this documentation](!docs!/learn/f
 - [Authenticate Custom Actor Types](./create-actor-type/page.mdx): Create custom user or actor types, such as managers, authenticate them in your application, and guard routes based on the custom user types.
 - [Custom Authentication Providers](/references/auth/provider): Integrate third-party services with custom authentication providors.
 
+---
+
 ## How to Use Auth Module's Service
 
 In your Medusa application, you build flows around commerce modules. A flow is built as a [Workflow](!docs!/learn/fundamentals/workflows), which is a special function composed of a series of steps that guarantees data consistency and reliable roll-back mechanism. 
@@ -88,6 +90,30 @@ export const authenticateUserWorkflow = createWorkflow(
   }
 )
 ```
+
+You can then execute the workflow in your custom API routes, scheduled jobs, or subscribers:
+
+```ts title="API Route" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import type {
+  MedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http"
+import authenticateUserWorkflow from "../../workflows/authenticate-user"
+
+export async function GET(
+  req: MedusaRequest,
+  res: MedusaResponse
+) {
+  const { result } = await authenticateUserWorkflow(req.scope)
+    .run({
+      req
+    })
+
+  res.send(result)
+}
+```
+
+Learn more about workflows in [this documentation](!docs!/learn/fundamentals/workflows).
 
 ---
 
