revise customer module

--- a/www/apps/resources/app/commerce-modules/api-key/page.mdx
+++ b/www/apps/resources/app/commerce-modules/api-key/page.mdx
@@ -69,7 +69,7 @@ const createApiKeyStep = createStep(
 export const createApiKeyWorkflow = createWorkflow(
   "create-api-key",
   () => {
-    const apiKey = createApiKeyStep()
+    const { apiKey } = createApiKeyStep()
 
     return new WorkflowResponse({
       apiKey,
