--- a/www/apps/resources/app/commerce-modules/cart/page.mdx
+++ b/www/apps/resources/app/commerce-modules/cart/page.mdx
@@ -78,7 +78,7 @@ const createCartStep = createStep(
 export const createCartWorkflow = createWorkflow(
   "create-cart",
   () => {
-    const cart = createCartStep()
+    const { cart } = createCartStep()
 
     return new WorkflowResponse({
       cart,
