revise promotion module

--- a/www/apps/resources/app/commerce-modules/customer/page.mdx
+++ b/www/apps/resources/app/commerce-modules/customer/page.mdx
@@ -86,7 +86,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import createCustomerWorkflow from "../../workflows/create-customer"
+    import {createCustomerWorkflow} from "../../workflows/create-customer"
 
     export async function GET(
       req: MedusaRequest,
@@ -107,7 +107,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import createCustomerWorkflow from "../workflows/create-customer"
+    import {createCustomerWorkflow} from "../workflows/create-customer"
 
     export default async function handleCustomerCreate({
       event: { data },
@@ -129,7 +129,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/message-daily.ts" highlights={[["7"], ["8"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import createCustomerWorkflow from "../workflows/create-customer"
+    import {createCustomerWorkflow} from "../workflows/create-customer"
 
     export default async function myCustomJob(
       container: MedusaContainer
