--- a/www/apps/resources/app/commerce-modules/product/page.mdx
+++ b/www/apps/resources/app/commerce-modules/product/page.mdx
@@ -98,7 +98,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import createProductWorkflow from "../../workflows/create-product"
+    import {createProductWorkflow} from "../../workflows/create-product"
 
     export async function GET(
       req: MedusaRequest,
@@ -119,7 +119,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import createProductWorkflow from "../workflows/create-product"
+    import {createProductWorkflow} from "../workflows/create-product"
 
     export default async function handleCustomerCreate({
       event: { data },
@@ -141,7 +141,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/message-daily.ts" highlights={[["7"], ["8"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import createProductWorkflow from "../workflows/create-product"
+    import {createProductWorkflow} from "../workflows/create-product"
 
     export default async function myCustomJob(
       container: MedusaContainer
