--- a/www/apps/resources/app/commerce-modules/api-key/page.mdx
+++ b/www/apps/resources/app/commerce-modules/api-key/page.mdx
@@ -88,7 +88,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import createApiKeyWorkflow from "../../workflows/create-api-key"
+    import {createApiKeyWorkflow} from "../../workflows/create-api-key"
 
     export async function GET(
       req: MedusaRequest,
@@ -109,7 +109,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import createApiKeyWorkflow from "../workflows/create-api-key"
+    import {createApiKeyWorkflow} from "../workflows/create-api-key"
 
     export default async function handleCustomerCreate({
       event: { data },
@@ -131,7 +131,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/message-daily.ts" highlights={[["7"], ["8"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import createApiKeyWorkflow from "../workflows/create-api-key"
+    import {createApiKeyWorkflow} from "../workflows/create-api-key"
 
     export default async function myCustomJob(
       container: MedusaContainer
