--- a/www/apps/resources/app/commerce-modules/auth/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/page.mdx
@@ -102,7 +102,7 @@ import type {
   MedusaRequest,
   MedusaResponse,
 } from "@medusajs/framework/http"
-import authenticateUserWorkflow from "../../workflows/authenticate-user"
+import {authenticateUserWorkflow} from "../../workflows/authenticate-user"
 
 export async function GET(
   req: MedusaRequest,
