--- a/www/apps/resources/app/commerce-modules/currency/page.mdx
+++ b/www/apps/resources/app/commerce-modules/currency/page.mdx
@@ -90,7 +90,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import retrievePriceWithCurrency from "../../workflows/retrieve-price-with-currency"
+    import {retrievePriceWithCurrency} from "../../workflows/retrieve-price-with-currency"
 
     export async function GET(
       req: MedusaRequest,
@@ -113,7 +113,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import retrievePriceWithCurrency from "../workflows/retrieve-price-with-currency"
+    import {retrievePriceWithCurrency} from "../workflows/retrieve-price-with-currency"
 
     export default async function handleCustomerCreate({
       event: { data },
@@ -137,7 +137,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/message-daily.ts" highlights={[["7"], ["8"], ["9"], ["10"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import retrievePriceWithCurrency from "../workflows/retrieve-price-with-currency"
+    import {retrievePriceWithCurrency} from "../workflows/retrieve-price-with-currency"
 
     export default async function myCustomJob(
       container: MedusaContainer
