--- a/www/apps/resources/app/commerce-modules/fulfillment/page.mdx
+++ b/www/apps/resources/app/commerce-modules/fulfillment/page.mdx
@@ -102,7 +102,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import createFulfillmentWorkflow from "../../workflows/create-fuilfillment"
+    import {createFulfillmentWorkflow} from "../../workflows/create-fuilfillment"
 
     export async function GET(
       req: MedusaRequest,
@@ -123,7 +123,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import createFulfillmentWorkflow from "../workflows/create-fuilfillment"
+    import {createFulfillmentWorkflow} from "../workflows/create-fuilfillment"
 
     export default async function handleCustomerCreate({
       event: { data },
@@ -145,7 +145,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/message-daily.ts" highlights={[["7"], ["8"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import createFulfillmentWorkflow from "../workflows/create-fuilfillment"
+    import {createFulfillmentWorkflow} from "../workflows/create-fuilfillment"
 
     export default async function myCustomJob(
       container: MedusaContainer
