--- a/www/apps/resources/app/commerce-modules/order/page.mdx
+++ b/www/apps/resources/app/commerce-modules/order/page.mdx
@@ -101,7 +101,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import createDraftOrderWorkflow from "../../workflows/create-draft-order"
+    import {createDraftOrderWorkflow} from "../../workflows/create-draft-order"
 
     export async function GET(
       req: MedusaRequest,
@@ -122,7 +122,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import createDraftOrderWorkflow from "../workflows/create-draft-order"
+    import {createDraftOrderWorkflow} from "../workflows/create-draft-order"
 
     export default async function handleCustomerCreate({
       event: { data },
@@ -144,7 +144,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/message-daily.ts" highlights={[["7"], ["8"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import createDraftOrderWorkflow from "../workflows/create-draft-order"
+    import {createDraftOrderWorkflow} from "../workflows/create-draft-order"
 
     export default async function myCustomJob(
       container: MedusaContainer
