revise region module

--- a/www/apps/resources/app/commerce-modules/api-key/page.mdx
+++ b/www/apps/resources/app/commerce-modules/api-key/page.mdx
@@ -139,7 +139,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       const { result } = await createApiKeyWorkflow(container)
         .run()
 
-      console.log(result.message)
+      console.log(result)
     }
 
     export const config = {
