--- a/www/apps/resources/app/commerce-modules/product/page.mdx
+++ b/www/apps/resources/app/commerce-modules/product/page.mdx
@@ -23,7 +23,7 @@ Learn more about why modules are isolated in [this documentation](!docs!/learn/f
 
 ---
 
-## How to Use Product Module's Service
+## How to Use the Product Module
 
 In your Medusa application, you build flows around commerce modules. A flow is built as a [Workflow](!docs!/learn/fundamentals/workflows), which is a special function composed of a series of steps that guarantees data consistency and reliable roll-back mechanism. 
 
@@ -149,7 +149,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       const { result } = await createProductWorkflow(container)
         .run()
 
-      console.log(result.message)
+      console.log(result)
     }
 
     export const config = {
