--- a/www/apps/resources/app/commerce-modules/currency/page.mdx
+++ b/www/apps/resources/app/commerce-modules/currency/page.mdx
@@ -23,7 +23,7 @@ Learn more about why modules are isolated in [this documentation](!docs!/learn/f
 
 ---
 
-## How to Use Currency Module's Service
+## How to Use the Currency Module
 
 In your Medusa application, you build flows around commerce modules. A flow is built as a [Workflow](!docs!/learn/fundamentals/workflows), which is a special function composed of a series of steps that guarantees data consistency and reliable roll-back mechanism. 
 
@@ -147,7 +147,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
           price: 10
         })
 
-      console.log(result.message)
+      console.log(result)
     }
 
     export const config = {
