--- a/www/apps/resources/app/commerce-modules/inventory/page.mdx
+++ b/www/apps/resources/app/commerce-modules/inventory/page.mdx
@@ -25,7 +25,7 @@ Learn more about why modules are isolated in [this documentation](!docs!/learn/f
 
 ---
 
-## How to Use Inventory Module's Service
+## How to Use the Inventory Module
 
 In your Medusa application, you build flows around commerce modules. A flow is built as a [Workflow](!docs!/learn/fundamentals/workflows), which is a special function composed of a series of steps that guarantees data consistency and reliable roll-back mechanism. 
 
@@ -139,7 +139,7 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       const { result } = await createInventoryItemWorkflow(container)
         .run()
 
-      console.log(result.message)
+      console.log(result)
     }
 
     export const config = {
