--- a/www/apps/resources/app/commerce-modules/stock-location/page.mdx
+++ b/www/apps/resources/app/commerce-modules/stock-location/page.mdx
@@ -62,7 +62,7 @@ const createStockLocationStep = createStep(
   }
 )
 
-export const createStockLocation = createWorkflow(
+export const createStockLocationWorkflow = createWorkflow(
   "create-stock-location",
   () => {
     const { stockLocation } = createStockLocationStep()
@@ -82,13 +82,13 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       MedusaRequest,
       MedusaResponse,
     } from "@medusajs/framework/http"
-    import { createStockLocation } from "../../workflows/create-stock-location"
+    import { createStockLocationWorkflow } from "../../workflows/create-stock-location"
 
     export async function GET(
       req: MedusaRequest,
       res: MedusaResponse
     ) {
-      const { result } = await createStockLocation(req.scope)
+      const { result } = await createStockLocationWorkflow(req.scope)
         .run()
 
       res.send(result)
@@ -103,13 +103,13 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
       type SubscriberConfig,
       type SubscriberArgs,
     } from "@medusajs/framework"
-    import { createStockLocation } from "../workflows/create-stock-location"
+    import { createStockLocationWorkflow } from "../workflows/create-stock-location"
 
     export default async function handleUserCreated({
       event: { data },
       container,
     }: SubscriberArgs<{ id: string }>) {
-      const { result } = await createStockLocation(container)
+      const { result } = await createStockLocationWorkflow(container)
         .run()
 
       console.log(result)
@@ -125,12 +125,12 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
     
     ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
     import { MedusaContainer } from "@medusajs/framework/types"
-    import { createStockLocation } from "../workflows/create-stock-location"
+    import { createStockLocationWorkflow } from "../workflows/create-stock-location"
 
     export default async function myCustomJob(
       container: MedusaContainer
     ) {
-      const { result } = await createStockLocation(container)
+      const { result } = await createStockLocationWorkflow(container)
         .run()
 
       console.log(result)
