--- a/www/apps/resources/app/commerce-modules/tax/page.mdx
+++ b/www/apps/resources/app/commerce-modules/tax/page.mdx
@@ -6,142 +6,154 @@ export const metadata = {
 
 # {metadata.title}
 
-The Tax Module provides tax-related features in your Medusa and Node.js applications.
+In this section of the documentation, you will find resources to learn more about the Tax Module and how to use it in your application.
 
-## How to Use Tax Module's Service
+Medusa has tax related features available out-of-the-box through the Tax Module. A [module](!docs!/learn/fundamentals/modules) is a standalone package that provides features for a single domain. Each of Medusa's commerce features are placed in commerce modules, such as this Tax Module.
 
-You can use the Tax Module's main service by resolving from the Medusa container the resource `Modules.TAX`.
+<Note>
 
-For example:
+Learn more about why modules are isolated in [this documentation](!docs!/learn/fundamentals/modules/isolation).
 
-<CodeTabs groupId="resource-type">
-  <CodeTab label="Workflow Step" value="workflow-step">
+</Note>
 
-```ts title="src/workflows/hello-world/step1.ts"
-import { createStep } from "@medusajs/framework/workflows-sdk"
-import { Modules } from "@medusajs/framework/utils"
+## Tax Features
 
-const step1 = createStep("step-1", async (_, { container }) => {
-  const taxModuleService = container.resolve(
-    Modules.TAX
-  )
-
-  const taxRegions = await taxModuleService.listTaxRegions()
-})
-```
-
-  </CodeTab>
-  <CodeTab label="API Route" value="api-route">
-
-```ts title="src/api/store/custom/route.ts"
-import { MedusaRequest, MedusaResponse } from "@medusajs/framework/http"
-import { Modules } from "@medusajs/framework/utils"
-
-export async function GET(
-  req: MedusaRequest,
-  res: MedusaResponse
-): Promise<void> {
-  const taxModuleService = req.scope.resolve(
-    Modules.TAX
-  )
-
-  res.json({
-    tax_regions: await taxModuleService.listTaxRegions(),
-  })
-}
-```
-
-  </CodeTab>
-  <CodeTab label="Subscriber" value="subscribers">
-
-```ts title="src/subscribers/custom-handler.ts"
-import { SubscriberArgs } from "@medusajs/framework"
-import { Modules } from "@medusajs/framework/utils"
-
-export default async function subscriberHandler({ container }: SubscriberArgs) {
-  const taxModuleService = container.resolve(
-    Modules.TAX
-  )
-
-  const taxRegions = await taxModuleService.listTaxRegions()
-}
-```
-
-  </CodeTab>
-</CodeTabs>
+- [Tax Settings Per Region](./tax-region/page.mdx): Set different tax settings for each tax region.
+- [Tax Rates and Rules](./tax-rates-and-rules/page.mdx): Manage each region's default tax rates and override them with conditioned tax rates.
+- [Retrieve Tax Lines for carts and orders](./tax-calculation-with-provider/page.mdx): Calculate and retrieve the tax lines of a cart or order's line items and shipping methods with tax providers.
 
 ---
 
-## Features
+## How to Use Tax Module's Service
 
-### Tax Settings Per Region
+In your Medusa application, you build flows around commerce modules. A flow is built as a [Workflow](!docs!/learn/fundamentals/workflows), which is a special function composed of a series of steps that guarantees data consistency and reliable roll-back mechanism. 
 
-Set different tax settings for each tax region.
+You can build custom workflows and steps. You can also re-use Medusa's workflows and steps, which are provided by the `@medusajs/medusa/core-flows` package.
 
-```ts
-const taxRegion = await taxModuleService.createTaxRegions({
-  country_code: "us",
-})
-```
+For example:
 
-### Tax Rates and Rules
+export const highlights = [
+  ["12", "Modules.TAX", "Resolve the module in a step."]
+]
 
-Manage each region's default tax rates and override them with conditioned tax rates.
+```ts title="src/workflows/create-tax-region.ts" highlights={highlights}
+import { 
+  createWorkflow, 
+  WorkflowResponse,
+  createStep,
+  StepResponse,
+} from "@medusajs/framework/workflows-sdk"
+import { Modules } from "@medusajs/framework/utils"
 
-```ts
-const taxRates = await taxModuleService.createTaxRates([
-  {
-    tax_region_id: "txreg_123",
-    name: "Default tax rate",
-    is_default: true,
-    rate: 10,
-  },
-  {
-    tax_region_id: "txreg_123",
-    name: "Shirt product type",
-    is_default: false,
-    rate: 15,
-    rules: [
-      {
-        reference: "product_type",
-        reference_id: "ptyp_1",
-      },
-    ],
-  },
-])
-```
+const createTaxRegionStep = createStep(
+  "create-tax-region",
+  async ({}, { container }) => {
+    const taxModuleService = container.resolve(Modules.TAX)
 
-### Retrieve Cart's Tax Lines
-
-Calculate and retrieve the tax lines of a cart's line items and shipping methods with tax providers.
-
-```ts
-const taxLines = await taxModuleService.getTaxLines(
-  [
-    {
-      id: "cali_123",
-      product_id: "prod_123",
-      unit_price: 1000,
-      quantity: 1,
-    },
-    {
-      id: "casm_123",
-      shipping_option_id: "so_123",
-      unit_price: 2000,
-    },
-  ],
-  {
-    address: {
+    const taxRegion = await taxModuleService.createTaxRegions({
       country_code: "us",
-    },
+    })
+
+    return new StepResponse({ taxRegion }, taxRegion.id)
+  },
+  async (taxRegionId, { container }) => {
+    const taxModuleService = container.resolve(Modules.TAX)
+
+    await taxModuleService.deleteTaxRegions([taxRegionId])
+  }
+)
+
+export const createTaxRegionWorkflow = createWorkflow(
+  "create-tax-region",
+  () => {
+    const { taxRegion } = await createTaxRegionStep()
+
+    return new WorkflowResponse({ taxRegion })
   }
 )
 ```
 
-You can use different tax providers for each region to handle tax-line retrieval differently.
+You can then execute the workflow in your custom API routes, scheduled jobs, or subscribers:
+
+<CodeTabs group="resource-types">
+  <CodeTab label="API Route" value="api-route">
+    
+    ```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+    import type {
+      MedusaRequest,
+      MedusaResponse,
+    } from "@medusajs/framework/http"
+    import { createTaxRegionWorkflow } from "../../workflows/create-tax-region"
+
+    export async function GET(
+      req: MedusaRequest,
+      res: MedusaResponse
+    ) {
+      const { result } = await createTaxRegionWorkflow(req.scope)
+        .run()
+
+      res.send(result)
+    }
+    ```
+
+  </CodeTab>
+  <CodeTab label="Subscriber" value="subscriber">
+    
+    ```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+    import {
+      type SubscriberConfig,
+      type SubscriberArgs,
+    } from "@medusajs/framework"
+    import { createTaxRegionWorkflow } from "../workflows/create-tax-region"
+
+    export default async function handleUserCreated({
+      event: { data },
+      container,
+    }: SubscriberArgs<{ id: string }>) {
+      const { result } = await createTaxRegionWorkflow(container)
+        .run()
+
+      console.log(result)
+    }
+
+    export const config: SubscriberConfig = {
+      event: "user.created",
+    }
+    ```
+
+  </CodeTab>
+  <CodeTab label="Scheduled Job" value="scheduled-job">
+    
+    ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
+    import { MedusaContainer } from "@medusajs/framework/types"
+    import { createTaxRegionWorkflow } from "../workflows/create-tax-region"
+
+    export default async function myCustomJob(
+      container: MedusaContainer
+    ) {
+      const { result } = await createTaxRegionWorkflow(container)
+        .run()
+
+      console.log(result)
+    }
+
+    export const config = {
+      name: "run-once-a-day",
+      schedule: `0 0 * * *`,
+    };
+    ```
+
+  </CodeTab>
+</CodeTabs>
+
+Learn more about workflows in [this documentation](!docs!/learn/fundamentals/workflows).
 
 ---
 
 ## Configure Tax Module
 
-Refer to [this documentation](./module-options/page.mdx) for details on the module's options.
+The Tax Module accepts options for further configurations. Refer to [this documentation](./module-options/page.mdx) for details on the module's options.
+
+---
+
+<CommerceModuleSections name="Tax" />
