revise user module

--- a/www/apps/resources/app/commerce-modules/tax/page.mdx
+++ b/www/apps/resources/app/commerce-modules/tax/page.mdx
@@ -66,7 +66,7 @@ const createTaxRegionStep = createStep(
 export const createTaxRegionWorkflow = createWorkflow(
   "create-tax-region",
   () => {
-    const { taxRegion } = await createTaxRegionStep()
+    const { taxRegion } = createTaxRegionStep()
 
     return new WorkflowResponse({ taxRegion })
   }
