--- a/www/apps/resources/app/commerce-modules/currency/page.mdx
+++ b/www/apps/resources/app/commerce-modules/currency/page.mdx
@@ -41,7 +41,7 @@ import {
   WorkflowResponse,
   createStep,
   StepResponse,
-  transform
+  transform,
 } from "@medusajs/framework/workflows-sdk"
 import { Modules } from "@medusajs/framework/utils"
 
@@ -53,7 +53,7 @@ const retrieveCurrencyStep = createStep(
     const currency = await currencyModuleService
       .retrieveCurrency("usd")
 
-    return new StepResponse({ currency }, currency.id)
+    return new StepResponse({ currency })
   }
 )
 
@@ -64,11 +64,11 @@ type Input = {
 export const retrievePriceWithCurrency = createWorkflow(
   "create-currency",
   (input: Input) => {
-    const { currency } = await retrieveCurrencyStep()
+    const { currency } = retrieveCurrencyStep()
 
     const formattedPrice = transform({
       input,
-      currency
+      currency,
     }, (data) => {
       return `${data.currency.symbol}${data.input.price}`
     })
@@ -85,76 +85,76 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
 <CodeTabs group="resource-types">
   <CodeTab label="API Route" value="api-route">
     
-    ```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"], ["13"], ["14"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import type {
-      MedusaRequest,
-      MedusaResponse,
-    } from "@medusajs/framework/http"
-    import {retrievePriceWithCurrency} from "../../workflows/retrieve-price-with-currency"
+```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"], ["13"], ["14"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import type {
+  MedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http"
+import { retrievePriceWithCurrency } from "../../workflows/retrieve-price-with-currency"
 
-    export async function GET(
-      req: MedusaRequest,
-      res: MedusaResponse
-    ) {
-      const { result } = await retrievePriceWithCurrency(req.scope)
-        .run({
-          price: 10
-        })
+export async function GET(
+  req: MedusaRequest,
+  res: MedusaResponse
+) {
+  const { result } = await retrievePriceWithCurrency(req.scope)
+    .run({
+      price: 10,
+    })
 
-      res.send(result)
-    }
-    ```
+  res.send(result)
+}
+```
 
   </CodeTab>
   <CodeTab label="Subscriber" value="subscriber">
     
-    ```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"], ["13"], ["14"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import {
-      type SubscriberConfig,
-      type SubscriberArgs,
-    } from "@medusajs/framework"
-    import {retrievePriceWithCurrency} from "../workflows/retrieve-price-with-currency"
+```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"], ["13"], ["14"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import {
+  type SubscriberConfig,
+  type SubscriberArgs,
+} from "@medusajs/framework"
+import { retrievePriceWithCurrency } from "../workflows/retrieve-price-with-currency"
 
-    export default async function handleUserCreated({
-      event: { data },
-      container,
-    }: SubscriberArgs<{ id: string }>) {
-      const { result } = await retrievePriceWithCurrency(container)
-        .run({
-          price: 10
-        })
+export default async function handleUserCreated({
+  event: { data },
+  container,
+}: SubscriberArgs<{ id: string }>) {
+  const { result } = await retrievePriceWithCurrency(container)
+    .run({
+      price: 10,
+    })
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config: SubscriberConfig = {
-      event: "user.created",
-    }
-    ```
+export const config: SubscriberConfig = {
+  event: "user.created",
+}
+```
 
   </CodeTab>
   <CodeTab label="Scheduled Job" value="scheduled-job">
     
-    ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"], ["9"], ["10"]]}
-    import { MedusaContainer } from "@medusajs/framework/types"
-    import {retrievePriceWithCurrency} from "../workflows/retrieve-price-with-currency"
+```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"], ["9"], ["10"]]}
+import { MedusaContainer } from "@medusajs/framework/types"
+import { retrievePriceWithCurrency } from "../workflows/retrieve-price-with-currency"
 
-    export default async function myCustomJob(
-      container: MedusaContainer
-    ) {
-      const { result } = await retrievePriceWithCurrency(container)
-        .run({
-          price: 10
-        })
+export default async function myCustomJob(
+  container: MedusaContainer
+) {
+  const { result } = await retrievePriceWithCurrency(container)
+    .run({
+      price: 10,
+    })
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config = {
-      name: "run-once-a-day",
-      schedule: `0 0 * * *`,
-    };
-    ```
+export const config = {
+  name: "run-once-a-day",
+  schedule: `0 0 * * *`,
+}
+```
 
   </CodeTab>
 </CodeTabs>
