--- a/www/apps/resources/app/commerce-modules/order/page.mdx
+++ b/www/apps/resources/app/commerce-modules/order/page.mdx
@@ -68,12 +68,14 @@ const createDraftOrderStep = createStep(
         },
       ],
       status: "draft",
-      is_draft_order: true,
     })
 
     return new StepResponse({ draftOrder }, draftOrder.id)
   },
   async (draftOrderId, { container }) => {
+    if (!draftOrderId) {
+      return
+    }
     const orderModuleService = container.resolve(Modules.ORDER)
 
     await orderModuleService.deleteOrders([draftOrderId])
@@ -88,6 +90,7 @@ export const createDraftOrderWorkflow = createWorkflow(
     return new WorkflowResponse({
       draftOrder,
     })
+  }
 )
 ```
 
@@ -96,70 +99,70 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
 <CodeTabs group="resource-types">
   <CodeTab label="API Route" value="api-route">
     
-    ```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import type {
-      MedusaRequest,
-      MedusaResponse,
-    } from "@medusajs/framework/http"
-    import {createDraftOrderWorkflow} from "../../workflows/create-draft-order"
+```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import type {
+  MedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http"
+import { createDraftOrderWorkflow } from "../../workflows/create-draft-order"
 
-    export async function GET(
-      req: MedusaRequest,
-      res: MedusaResponse
-    ) {
-      const { result } = await createDraftOrderWorkflow(req.scope)
-        .run()
+export async function GET(
+  req: MedusaRequest,
+  res: MedusaResponse
+) {
+  const { result } = await createDraftOrderWorkflow(req.scope)
+    .run()
 
-      res.send(result)
-    }
-    ```
+  res.send(result)
+}
+```
 
   </CodeTab>
   <CodeTab label="Subscriber" value="subscriber">
     
-    ```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import {
-      type SubscriberConfig,
-      type SubscriberArgs,
-    } from "@medusajs/framework"
-    import {createDraftOrderWorkflow} from "../workflows/create-draft-order"
+```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import {
+  type SubscriberConfig,
+  type SubscriberArgs,
+} from "@medusajs/framework"
+import { createDraftOrderWorkflow } from "../workflows/create-draft-order"
 
-    export default async function handleUserCreated({
-      event: { data },
-      container,
-    }: SubscriberArgs<{ id: string }>) {
-      const { result } = await createDraftOrderWorkflow(container)
-        .run()
+export default async function handleUserCreated({
+  event: { data },
+  container,
+}: SubscriberArgs<{ id: string }>) {
+  const { result } = await createDraftOrderWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config: SubscriberConfig = {
-      event: "user.created",
-    }
-    ```
+export const config: SubscriberConfig = {
+  event: "user.created",
+}
+```
 
   </CodeTab>
   <CodeTab label="Scheduled Job" value="scheduled-job">
     
-    ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
-    import { MedusaContainer } from "@medusajs/framework/types"
-    import {createDraftOrderWorkflow} from "../workflows/create-draft-order"
+```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
+import { MedusaContainer } from "@medusajs/framework/types"
+import { createDraftOrderWorkflow } from "../workflows/create-draft-order"
 
-    export default async function myCustomJob(
-      container: MedusaContainer
-    ) {
-      const { result } = await createDraftOrderWorkflow(container)
-        .run()
+export default async function myCustomJob(
+  container: MedusaContainer
+) {
+  const { result } = await createDraftOrderWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config = {
-      name: "run-once-a-day",
-      schedule: `0 0 * * *`,
-    };
-    ```
+export const config = {
+  name: "run-once-a-day",
+  schedule: `0 0 * * *`,
+}
+```
 
   </CodeTab>
 </CodeTabs>
