--- a/www/apps/resources/app/commerce-modules/payment/page.mdx
+++ b/www/apps/resources/app/commerce-modules/payment/page.mdx
@@ -60,6 +60,9 @@ const createPaymentCollectionStep = createStep(
     return new StepResponse({ paymentCollection }, paymentCollection.id)
   },
   async (paymentCollectionId, { container }) => {
+    if (!paymentCollectionId) {
+      return
+    }
     const paymentModuleService = container.resolve(Modules.PAYMENT)
 
     await paymentModuleService.deletePaymentCollections([paymentCollectionId])
@@ -83,70 +86,70 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
 <CodeTabs group="resource-types">
   <CodeTab label="API Route" value="api-route">
     
-    ```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import type {
-      MedusaRequest,
-      MedusaResponse,
-    } from "@medusajs/framework/http"
-    import {createPaymentCollectionWorkflow} from "../../workflows/create-payment-collection"
+```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import type {
+  MedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http"
+import { createPaymentCollectionWorkflow } from "../../workflows/create-payment-collection"
 
-    export async function GET(
-      req: MedusaRequest,
-      res: MedusaResponse
-    ) {
-      const { result } = await createPaymentCollectionWorkflow(req.scope)
-        .run()
+export async function GET(
+  req: MedusaRequest,
+  res: MedusaResponse
+) {
+  const { result } = await createPaymentCollectionWorkflow(req.scope)
+    .run()
 
-      res.send(result)
-    }
-    ```
+  res.send(result)
+}
+```
 
   </CodeTab>
   <CodeTab label="Subscriber" value="subscriber">
     
-    ```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import {
-      type SubscriberConfig,
-      type SubscriberArgs,
-    } from "@medusajs/framework"
-    import {createPaymentCollectionWorkflow} from "../workflows/create-payment-collection"
+```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import {
+  type SubscriberConfig,
+  type SubscriberArgs,
+} from "@medusajs/framework"
+import { createPaymentCollectionWorkflow } from "../workflows/create-payment-collection"
 
-    export default async function handleUserCreated({
-      event: { data },
-      container,
-    }: SubscriberArgs<{ id: string }>) {
-      const { result } = await createPaymentCollectionWorkflow(container)
-        .run()
+export default async function handleUserCreated({
+  event: { data },
+  container,
+}: SubscriberArgs<{ id: string }>) {
+  const { result } = await createPaymentCollectionWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config: SubscriberConfig = {
-      event: "user.created",
-    }
-    ```
+export const config: SubscriberConfig = {
+  event: "user.created",
+}
+```
 
   </CodeTab>
   <CodeTab label="Scheduled Job" value="scheduled-job">
     
-    ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
-    import { MedusaContainer } from "@medusajs/framework/types"
-    import {createPaymentCollectionWorkflow} from "../workflows/create-payment-collection"
+```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
+import { MedusaContainer } from "@medusajs/framework/types"
+import { createPaymentCollectionWorkflow } from "../workflows/create-payment-collection"
 
-    export default async function myCustomJob(
-      container: MedusaContainer
-    ) {
-      const { result } = await createPaymentCollectionWorkflow(container)
-        .run()
+export default async function myCustomJob(
+  container: MedusaContainer
+) {
+  const { result } = await createPaymentCollectionWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config = {
-      name: "run-once-a-day",
-      schedule: `0 0 * * *`,
-    };
-    ```
+export const config = {
+  name: "run-once-a-day",
+  schedule: `0 0 * * *`,
+}
+```
 
   </CodeTab>
 </CodeTabs>
