--- a/www/apps/resources/app/commerce-modules/promotion/page.mdx
+++ b/www/apps/resources/app/commerce-modules/promotion/page.mdx
@@ -57,7 +57,7 @@ const createPromotionStep = createStep(
       application_method: {
         type: "percentage",
         target_type: "order",
-        value: "10",
+        value: 10,
         currency_code: "usd",
       },
     })
@@ -65,6 +65,9 @@ const createPromotionStep = createStep(
     return new StepResponse({ promotion }, promotion.id)
   },
   async (promotionId, { container }) => {
+    if (!promotionId) {
+      return
+    }
     const promotionModuleService = container.resolve(Modules.PROMOTION)
 
     await promotionModuleService.deletePromotions(promotionId)
@@ -88,70 +91,70 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
 <CodeTabs group="resource-types">
   <CodeTab label="API Route" value="api-route">
     
-    ```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import type {
-      MedusaRequest,
-      MedusaResponse,
-    } from "@medusajs/framework/http"
-    import { createPromotionWorkflow } from "../../workflows/create-cart"
+```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import type {
+  MedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http"
+import { createPromotionWorkflow } from "../../workflows/create-cart"
 
-    export async function GET(
-      req: MedusaRequest,
-      res: MedusaResponse
-    ) {
-      const { result } = await createPromotionWorkflow(req.scope)
-        .run()
+export async function GET(
+  req: MedusaRequest,
+  res: MedusaResponse
+) {
+  const { result } = await createPromotionWorkflow(req.scope)
+    .run()
 
-      res.send(result)
-    }
-    ```
+  res.send(result)
+}
+```
 
   </CodeTab>
   <CodeTab label="Subscriber" value="subscriber">
     
-    ```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import {
-      type SubscriberConfig,
-      type SubscriberArgs,
-    } from "@medusajs/framework"
-    import { createPromotionWorkflow } from "../workflows/create-cart"
+```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import {
+  type SubscriberConfig,
+  type SubscriberArgs,
+} from "@medusajs/framework"
+import { createPromotionWorkflow } from "../workflows/create-cart"
 
-    export default async function handleUserCreated({
-      event: { data },
-      container,
-    }: SubscriberArgs<{ id: string }>) {
-      const { result } = await createPromotionWorkflow(container)
-        .run()
+export default async function handleUserCreated({
+  event: { data },
+  container,
+}: SubscriberArgs<{ id: string }>) {
+  const { result } = await createPromotionWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config: SubscriberConfig = {
-      event: "user.created",
-    }
-    ```
+export const config: SubscriberConfig = {
+  event: "user.created",
+}
+```
 
   </CodeTab>
   <CodeTab label="Scheduled Job" value="scheduled-job">
     
-    ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
-    import { MedusaContainer } from "@medusajs/framework/types"
-    import { createPromotionWorkflow } from "../workflows/create-cart"
+```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
+import { MedusaContainer } from "@medusajs/framework/types"
+import { createPromotionWorkflow } from "../workflows/create-cart"
 
-    export default async function myCustomJob(
-      container: MedusaContainer
-    ) {
-      const { result } = await createPromotionWorkflow(container)
-        .run()
+export default async function myCustomJob(
+  container: MedusaContainer
+) {
+  const { result } = await createPromotionWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config = {
-      name: "run-once-a-day",
-      schedule: `0 0 * * *`,
-    };
-    ```
+export const config = {
+  name: "run-once-a-day",
+  schedule: `0 0 * * *`,
+}
+```
 
   </CodeTab>
 </CodeTabs>
