--- a/www/apps/resources/app/commerce-modules/sales-channel/page.mdx
+++ b/www/apps/resources/app/commerce-modules/sales-channel/page.mdx
@@ -72,12 +72,15 @@ const createSalesChannelStep = createStep(
       },
     ])
 
-    return new StepResponse({ salesChannels }, salesChannels.map(sc => sc.id))
+    return new StepResponse({ salesChannels }, salesChannels.map((sc) => sc.id))
   },
   async (salesChannelIds, { container }) => {
+    if (!salesChannelIds) {
+      return
+    }
     const salesChannelModuleService = container.resolve(Modules.SALES_CHANNEL)
 
-    const salesChannels = await salesChannelModuleService.deleteSalesChannels(
+    await salesChannelModuleService.deleteSalesChannels(
       salesChannelIds
     )
   }
@@ -100,70 +103,70 @@ You can then execute the workflow in your custom API routes, scheduled jobs, or 
 <CodeTabs group="resource-types">
   <CodeTab label="API Route" value="api-route">
     
-    ```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import type {
-      MedusaRequest,
-      MedusaResponse,
-    } from "@medusajs/framework/http"
-    import { createSalesChannelWorkflow } from "../../workflows/create-sales-channel"
+```ts title="src/api/workflow/route.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import type {
+  MedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http"
+import { createSalesChannelWorkflow } from "../../workflows/create-sales-channel"
 
-    export async function GET(
-      req: MedusaRequest,
-      res: MedusaResponse
-    ) {
-      const { result } = await createSalesChannelWorkflow(req.scope)
-        .run()
+export async function GET(
+  req: MedusaRequest,
+  res: MedusaResponse
+) {
+  const { result } = await createSalesChannelWorkflow(req.scope)
+    .run()
 
-      res.send(result)
-    }
-    ```
+  res.send(result)
+}
+```
 
   </CodeTab>
   <CodeTab label="Subscriber" value="subscriber">
     
-    ```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
-    import {
-      type SubscriberConfig,
-      type SubscriberArgs,
-    } from "@medusajs/framework"
-    import { createSalesChannelWorkflow } from "../workflows/create-sales-channel"
+```ts title="src/subscribers/user-created.ts" highlights={[["11"], ["12"]]} collapsibleLines="1-6" expandButtonLabel="Show Imports"
+import {
+  type SubscriberConfig,
+  type SubscriberArgs,
+} from "@medusajs/framework"
+import { createSalesChannelWorkflow } from "../workflows/create-sales-channel"
 
-    export default async function handleUserCreated({
-      event: { data },
-      container,
-    }: SubscriberArgs<{ id: string }>) {
-      const { result } = await createSalesChannelWorkflow(container)
-        .run()
+export default async function handleUserCreated({
+  event: { data },
+  container,
+}: SubscriberArgs<{ id: string }>) {
+  const { result } = await createSalesChannelWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config: SubscriberConfig = {
-      event: "user.created",
-    }
-    ```
+export const config: SubscriberConfig = {
+  event: "user.created",
+}
+```
 
   </CodeTab>
   <CodeTab label="Scheduled Job" value="scheduled-job">
     
-    ```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
-    import { MedusaContainer } from "@medusajs/framework/types"
-    import { createSalesChannelWorkflow } from "../workflows/create-sales-channel"
+```ts title="src/jobs/run-daily.ts" highlights={[["7"], ["8"]]}
+import { MedusaContainer } from "@medusajs/framework/types"
+import { createSalesChannelWorkflow } from "../workflows/create-sales-channel"
 
-    export default async function myCustomJob(
-      container: MedusaContainer
-    ) {
-      const { result } = await createSalesChannelWorkflow(container)
-        .run()
+export default async function myCustomJob(
+  container: MedusaContainer
+) {
+  const { result } = await createSalesChannelWorkflow(container)
+    .run()
 
-      console.log(result)
-    }
+  console.log(result)
+}
 
-    export const config = {
-      name: "run-once-a-day",
-      schedule: `0 0 * * *`,
-    };
-    ```
+export const config = {
+  name: "run-once-a-day",
+  schedule: `0 0 * * *`,
+}
+```
 
   </CodeTab>
 </CodeTabs>
