--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -98,7 +98,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
 
     </TabsContent>
     <TabsContent value="Cloudflare R2">
-    1. Create a [Cloudflare free account](https://supabase.com/dashboard/sign-in) if you don’t have.
+    1. Create a [Cloudflare account](https://dash.cloudflare.com/sign-up).
     2. Set up your R2 bucket:
        - Navigate to R2 Object Storage in your dashboard
        - Click "Create bucket"
