--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -100,7 +100,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
     <TabsContent value="Cloudflare R2">
     1. Create a [Cloudflare account](https://dash.cloudflare.com/sign-up).
     2. Set up your R2 bucket:
-       - Navigate to R2 Object Storage in your dashboard
+       - Navigate to R2 Object Storage in your dashboard. You may need to provide your credit-card information.
        - Click "Create bucket"
        - Enter a unique bucket name
        - Select "Automatic" for location
