--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -107,7 +107,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
        - Choose "Standard" for storage class
        - Confirm by clicking "Create bucket"
     3. Configure public access:
-       - Open your bucket's Settings
+       - On your bucket's dashboard, click on the Settings tab.
        - Locate the Public Access section
        - Enable R2.dev subdomain access
        - Type 'allow' to confirm
