--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -116,7 +116,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
        - Find your Account ID in the R2 dashboard's top right corner
        - [Generate API tokens](https://dash.cloudflare.com/?to=/:account/r2/api-tokens):
          - Select **Create API token**
-         - Edit the **R2 Token** name
+         - Edit the "R2 Token" name
          - Under **Permissions**, select appropriate permission types
          - Optionally scope token to specific buckets for Object Read/Write permissions
          - Once done, click the "Create API Token" button.
