--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -120,7 +120,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
          - Under **Permissions**, select appropriate permission types
          - Optionally scope token to specific buckets for Object Read/Write permissions
          - Once done, click the "Create API Token" button.
-         - Save the generated token as your **`S3_ACCESS_KEY_ID`, `S3_SECRET_ACCESS_KEY`**
+         - You'll receive an access key ID and a secret access key. Save them to use them later for the `S3_ACCESS_KEY_ID` and `S3_SECRET_ACCESS_KEY` environment variables.
        - Record your bucket name for configuration
        - Save your public bucket URL for reference
     
