--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -111,7 +111,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
        - Scroll down to the Public Access section, and click on "Allow Access" in the "R2.dev subdomain" card.
        - Type 'allow' to confirm
        - Copy the Public R2.dev Bucket URL for your `S3_FILE_URL`
-    4. Set up your credentials:
+    4. Retrieve credentials:
     
        - Find your Account ID in the R2 dashboard's top right corner
        - [Generate API tokens](https://dash.cloudflare.com/?to=/:account/r2/api-tokens):
