--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -114,7 +114,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
     4. Retrieve credentials:
     
        - Find your Account ID in the R2 dashboard's top right corner
-       - [Generate API tokens](https://dash.cloudflare.com/?to=/:account/r2/api-tokens):
+       - [Go to API tokens page](https://dash.cloudflare.com/?to=/:account/r2/api-tokens):
          - Select "Create API token"
          - Edit the "R2 Token" name
          - Under **Permissions**, select appropriate permission types
