fix build error

--- a/www/apps/api-reference/markdown/admin.mdx
+++ b/www/apps/api-reference/markdown/admin.mdx
@@ -1,4 +1,4 @@
-import { Feedback, CodeTabs, CodeTab } from "docs-ui"
+import { Feedback, CodeTabs, CodeTab, H1 } from "docs-ui"
 import SectionContainer from "@/components/Section/Container"
 import DividedMarkdownLayout from "@/layouts/DividedMarkdown"
 import { 
