--- a/www/apps/resources/app/commerce-modules/auth/module-options/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/module-options/page.mdx
@@ -36,6 +36,7 @@ module.exports = defineConfig({
   modules: [
     {
       resolve: "@medusajs/medusa/auth",
+      dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
       options: {
         providers: [
           {
