--- a/www/apps/resources/app/commerce-modules/auth/auth-providers/emailpass/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/auth-providers/emailpass/page.mdx
@@ -27,6 +27,7 @@ const modules = {
   // ...
   [Modules.AUTH]: {
     resolve: "@medusajs/medusa/auth",
+    dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
     options: {
       providers: [
         // other providers...
