--- a/www/apps/resources/app/commerce-modules/auth/auth-providers/google/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/auth-providers/google/page.mdx
@@ -44,6 +44,7 @@ const modules = {
   // ...
   [Modules.AUTH]: {
     resolve: "@medusajs/medusa/auth",
+    dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
     options: {
       providers: [
         // other providers...
