docs: added plugins documentation

--- a/www/apps/book/app/learn/fundamentals/modules/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/modules/page.mdx
@@ -16,6 +16,18 @@ Medusa removes this overhead by allowing you to easily write custom modules that
 
 As you learn more about Medusa, you will see that modules are central to customizations and integrations. With modules, your Medusa application can turn into a middleware solution for your commerce ecosystem.
 
+<Note title="Use a module if" type="success">
+
+- You want to build a custom feature related to a single domain or integrate a third-party service.
+
+</Note>
+
+<Note title="Don't use a module if" type="error">
+
+- You want to create a reusable package of customizations that include not only modules, but also API routes, workflows, and other customizations. Instead, use a [plugin](../plugins/page.mdx).
+
+</Note>
+
 ---
 
 ## How to Create a Module?
