--- a/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
@@ -114,8 +114,8 @@ module.exports = defineConfig({
   plugins: [
     {
       resolve: "@myorg/plugin-name",
-    }
-  ]
+    },
+  ],
 })
 ```
 
@@ -136,12 +136,12 @@ module.exports = defineConfig({
   // ...
   plugins: [
     {
-      resolve: '@myorg/plugin-name',
+      resolve: "@myorg/plugin-name",
       options: {
         apiKey: true,
       },
-    }
-  ]
+    },
+  ],
 })
 ```
 
