--- a/www/apps/resources/app/medusa-cli/commands/plugin/page.mdx
+++ b/www/apps/resources/app/medusa-cli/commands/plugin/page.mdx
@@ -21,7 +21,7 @@ These commands are available starting from [Medusa v2.2.1](https://github.com/me
 
 ## plugin\:publish
 
-Publish a plugin into the local packages registry. The command uses uses [Yalc](https://github.com/wclr/yalc) under the hood to publish the plugin to a local package registry. You can then install the plugin in a local Medusa project using the [plugin\:add](#pluginadd) command.
+Publish a plugin into the local packages registry. The command uses [Yalc](https://github.com/wclr/yalc) under the hood to publish the plugin to a local package registry. You can then install the plugin in a local Medusa project using the [plugin\:add](#pluginadd) command.
 
 ```bash
 npx medusa plugin:publish
